<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background_login">
  <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
  	<!-- 工班 -->
  	<TextView 
  		android:id="@+id/login_user_work"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_work"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/work_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_work_hint"
  		android:layout_below="@id/login_user_work"
  		android:singleLine="true"
  		android:inputType="text"/>
  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/work_edit"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/username_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/username_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- 登录button -->
    <Button 
    	android:id="@+id/signin_button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password_edit"
    	android:layout_alignRight="@id/password_edit"
    	
    	android:background="@drawable/loginbutton"
    /><!--android:text="@string/login_label_signin" -->
     <!-- 设置button -->
     <Button 
    	android:id="@+id/config_button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password_edit"
	    android:layout_alignBottom="@id/signin_button"
        android:background="@drawable/configbutton"
    /><!--  android:text="@string/login_label_config"-->

     <TextView
         android:id="@+id/login_config_input"
         style="@style/normalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/config_button"
         android:layout_alignRight="@+id/config_button"
         android:layout_marginRight="16dp"
         android:layout_marginTop="2dp"
         android:text="@string/login_label_config" />

     <TextView
         android:id="@+id/login_signin_input"
         style="@style/normalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/login_config_input"
         android:layout_alignBottom="@+id/login_config_input"
         android:layout_alignRight="@+id/signin_button"
         android:layout_marginRight="16dp"
         android:text="@string/login_label_signin" />

  </RelativeLayout>
  
  
  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    	<CheckBox android:text="@string/login_RememberMe" 
    	    android:id="@+id/loginRememberMeCheckBox"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="20px">
		</CheckBox>
<!---	 <TextView  android:id="@+id/register_link"
	     android:text="@string/login_register_link"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_marginLeft="15dp"
	     android:textColor="#888"
	     android:textColorLink="#FF0066CC"
	  />
	    <ImageView android:id="@+id/miniTwitter_logo"
	        android:src="@drawable/cat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="25dp"
	         /> 
-->
	 <ImageView android:src="@drawable/logo"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_alignParentRight="true"
	     android:layout_alignParentBottom="true"
	     android:paddingBottom="1dp"
	      />
	    </RelativeLayout>
 
</LinearLayout>
